--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "@rainbow-me/rainbowkit": "^0.7.1",
     "ethers": "^5.7.1",
     "next": "12.3.1",
