--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@rainbow-me/rainbowkit": "^0.7.1",
+    "axios": "^1.1.3",
     "ethers": "^5.7.1",
     "next": "12.3.1",
     "react": "18.2.0",
